--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ hex = "0.4.3"
 log = "0.4.21"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = { version = "1.0.115", features = ["raw_value"] }
+tempfile = "3.10.1"
 thiserror = "1.0.58"
 ureq = { version = "2.9.6", features = ["json"] }
